--- a/core/templates/core/historia.html
+++ b/core/templates/core/historia.html
@@ -1,21 +1,70 @@
 {% extends 'core/base.html' %}
 {% block content  %}
 <h1>Historia de Tibia</h1>
-    <hr>
-    <p>
-        Tibia es uno de los más antiguos y de mayor éxito juego en línea multijugador masivo de categoría de juegos de rol (MMORPG) creado en Europa. En un MMORPG la gente de todo el mundo se encuentra en un mundo virtual para explorar áreas, resolver dificiles enigmas y realizar hazañas heroicas.
+<hr>
 
-Durante 10 años, los jugadores han estado visitando el medieval mundo de Tibia. En la actualidad, más de 250000 jugadores de todo el mundo habitan en el continente Tibiano disfrutar de las numerosas características de juego.
-
-
-
-Actuando como Caballeros, Paladines, Magos o Druidas, los jugadores se enfrentan con el desafío de desarrollar las habilidades de sus personajes seleccionados, el estudio de una gran variedad de áreas y peligrosas mazmorras y la interacción con otros jugadores en un nivel social y diplomática. Además de las sofisticadas herramientas de charla es sobre todo la única y mejor parte de los jugadores de disfrutar de la libertad en Tibia, que crean una enorme experiencia de juego inmersiva. [external image what_is_tibia_vocations.jpg]
-
-Tibia se puede jugar de forma gratuita como una cuestión de principio. Sin embargo, la cuenta se puede actualizar en cualquier momento a una cuenta Premium. Algunas ventajas de las Cuentas Premium incluye el acceso a áreas especiales de juego y trajes, así como nuevas características especiales relacionadas con el juego.
-
-Un gran equipo de ayuda, compuesto por tutores y gamemasters, se asegura de que los jugadores puedan disfrutar de Tibia. Los tutores resuelven preguntas de los jugadores inexpertos en el canal de ayuda. Los gamemasters hacer cumplir las Reglas de Tibia, con un código especial de conducta que determina lo que los jugadores se les permite hacer en el juego y lo que no.
-    </p>
-    <img src="https://i.blogs.es/237c92/tibia/500_333.webp" alt="foto de referencia">
-    <hr>
-
+<div class="row">
+    <div class="col-md-8">
+        <p class="lead">
+            Tibia es uno de los MMORPG más antiguos y exitosos creados en Europa. Durante más de 25 años, los jugadores han estado visitando el mundo medieval de Tibia.
+        </p>
+        
+        <h3>Los Inicios</h3>
+        <p>
+            Tibia fue desarrollado por cuatro estudiantes alemanes: Stephan Börzsönyi, Guido Lübke, Ulrich Schlott y Stephan Vogler. 
+            El juego fue lanzado oficialmente el 7 de enero de 1997. El nombre "Tibia" hace referencia a los huesos de la pierna, 
+            continuando con la temática ósea de otros juegos de la época como "Ultima Online" (hueso del brazo).
+        </p>
+        
+        <h3>Expansión y Crecimiento</h3>
+        <p>
+            A lo largo de los años, Tibia ha experimentado numerosas actualizaciones y expansiones que han añadido nuevas islas, 
+            ciudades, criaturas y habilidades. Algunas de las actualizaciones más significativas incluyen la introducción de 
+            la magia (1998), la implementación de la profesión de paladín (1999), y la gran actualización de Tibia 8.0 en 2007 
+            que rediseñó por completo el mundo del juego.
+        </p>
+        
+        <div class="card mb-4">
+            <img src="https://i.pinimg.com/474x/87/ba/54/87ba54ebd693720f25a91bbe45a0d645.jpg" class="card-img-top" alt="Cliente antiguo de Tibia">
+            <div class="card-body">
+                <p class="card-text"><small class="text-muted">El cliente de Tibia en sus inicios (1997)</small></p>
+            </div>
+        </div>
+        
+        <h3>La Comunidad</h3>
+        <p>
+            Uno de los aspectos más destacados de Tibia es su comunidad internacional. A lo largo de los años, 
+            jugadores de todo el mundo han formado guildes, participado en guerras épicas y creado amistades 
+            duraderas. Los servidores se dividen en categorías como Open PVP, Optional PVP y Hardcore PVP, 
+            satisfaciendo diferentes estilos de juego.
+        </p>
+        
+        <h3>El Mundo de Tibia</h3>
+        <p>
+            El continente principal de Tibia incluye ciudades como Thais, Carlin, Venore y Darashia, cada una 
+            con su propia cultura y características únicas. Además del continente principal, los jugadores pueden 
+            explorar islas exóticas, peligrosas mazmorras y incluso otros planos de existencia.
+        </p>
+    </div>
+    
+    <div class="col-md-4">
+        <div class="sidebar">
+            <h4>Hitos Importantes</h4>
+            <ul>
+                <li><strong>1997</strong>: Lanzamiento oficial de Tibia</li>
+                <li><strong>1998</strong>: Introducción del sistema de magia</li>
+                <li><strong>1999</strong>: Implementación de la profesión de paladín</li>
+                <li><strong>2001</strong>: Lanzamiento de la versión 6.0 con grandes cambios</li>
+                <li><strong>2007</strong>: Actualización 8.0 que rediseñó el mundo</li>
+                <li><strong>2010</strong>: Introducción de la tarea de caza</li>
+                <li><strong>2017</strong>: Celebración del 20° aniversario</li>
+            </ul>
+            
+            <h4>Datos Curiosos</h4>
+            <p>El primer servidor de Tibia se llamaba "Alpha" y solo permitía 50 jugadores simultáneos.</p>
+            <p>El personaje más antiguo que aún existe se creó el 6 de enero de 1997.</p>
+            <p>Tibia ha sido traducido a más de 10 idiomas diferentes.</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
