--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,14 +1,68 @@
 {% extends 'core/base.html' %}
 {% block content  %}
-<h1>Inicio</h1>
-    <hr>
-    <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut neque ab fugit provident cupiditate. Nostrum, mollitia officiis ratione itaque pariatur inventore delectus earum! Aliquam doloribus blanditiis architecto atque corrupti quod.
-    </p>
-    <hr>
+<h1>Bienvenido al Fansite de Tibia</h1>
+<hr>
 
+<div class="row">
+    <div class="col-md-8">
+        <p class="lead">
+            Descubre todo sobre el legendario MMORPG que ha cautivado a millones de jugadores alrededor del mundo.
+        </p>
+        
+        <p>
+            Tibia es un juego de rol multijugador masivo en línea (MMORPG) ambientado en un mundo de fantasía medieval. 
+            Los jugadores pueden elegir entre cuatro vocaciones diferentes: caballeros, paladines, magos y druidas, 
+            cada una con habilidades y características únicas.
+        </p>
+        
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Explora</h5>
+                        <p class="card-text">Descubre ciudades, mazmorras y tierras misteriosas llenas de aventuras.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Socializa</h5>
+                        <p class="card-text">Únete a guildes, haz nuevos amigos y participa en eventos comunitarios.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <p>
+            Nuestro fansite ofrece información actualizada, guías útiles y una galería de imágenes para 
+            que puedas sumergirte en el fascinante mundo de Tibia.
+        </p>
+    </div>
+    
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header">
+                <h5>Noticias Recientes</h5>
+            </div>
+            <div class="card-body">
+                <div class="mb-3">
+                    <h6>Nueva actualización disponible</h6>
+                    <p class="small">Se ha lanzado la actualización 13.5 con nuevas misiones y mejoras.</p>
+                </div>
+                <div class="mb-3">
+                    <h6>Evento de Verano</h6>
+                    <p class="small">Participa en el evento especial de verano y obtén objetos exclusivos.</p>
+                </div>
+                <div>
+                    <h6>Torneo de PVP</h6>
+                    <p class="small">Inscripciones abiertas para el torneo de PVP de este mes.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
-
 
 
     
