--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,50 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tibia Fansite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <style>
+        .banner {
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://www.tibiawiki.com.br/images/7/7e/Tibia_Background_Artwork.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 80px 0;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .sidebar {
+            background-color: #f8f9fa;
+            border-radius: 5px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        footer {
+            background-color: #343a40;
+            color: white;
+            padding: 30px 0;
+            margin-top: 50px;
+        }
+    </style>
 </head>
-<header>        
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Tibia</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/gallery/">Galeria</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/informacion/">Información</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/historia/">Historia</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-</header>
 <body>
-<div>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Tibia-logo-2006-1000x450_schwarz.jpg"
-    height="500px"
-    width="1000px"
-     alt="ds">
-</div>
-   <ul>
-    <li>
-        <a href="/">Inicio</a>
-    </li>
-    <li>
-        <a href="/gallery/">Galeria</a>
-    </li>
-   </ul>
-   <h1>Bienvenidos</h1>
-   <hr>
-   <div>
-    {% block content  %}{% endblock %}
-   </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
+    <header>        
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Tibia-logo-2006-1000x450_schwarz.jpg" height="40" alt="Tibia Logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/gallery/">Galería</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/informacion/">Información</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/historia/">Historia</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Banner -->
+    <div class="banner">
+        <div class="container">
+            <h1 class="display-4">Bienvenidos al Mundo de Tibia</h1>
+            <p class="lead">Explora el legendario MMORPG que ha cautivado a millones de jugadores</p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <!-- Sidebar -->
+            <div class="col-md-3 sidebar">
+                <h4>Navegación Rápida</h4>
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/gallery/">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/informacion/">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/historia/">Historia</a>
+                    </li>
+                </ul>
+                <hr>
+                <h4>Noticias Recientes</h4>
+                <p>¡Nueva actualización disponible con más misiones y criaturas!</p>
+                <p>Evento especial de verano: participa y gana objetos exclusivos</p>
+            </div>
+            
+            <!-- Contenido Principal -->
+            <div class="col-md-9">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>Sobre Nosotros</h5>
+                    <p>Fansite no oficial dedicado a Tibia, el legendario MMORPG. Compartimos información, noticias y recursos para la comunidad.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Enlaces Rápidos</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="/" class="text-white">Inicio</a></li>
+                        <li><a href="/gallery/" class="text-white">Galería</a></li>
+                        <li><a href="/informacion/" class="text-white">Información</a></li>
+                        <li><a href="/historia/" class="text-white">Historia</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Contacto</h5>
+                    <p>¿Preguntas o sugerencias?<br>Escríbenos a: <a href="mailto:info@tibiafansite.com" class="text-white">info@tibiafansite.com</a></p>
+                    <p>&copy; 2023 Tibia Fansite. Todos los derechos reservados.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
 </body>
 </html>
